--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "leaflet": "^1.9.4",
+    "marked": "^15.0.12",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
