--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@vis.gl/react-google-maps": "^1.5.3",
+    "amazon-cognito-identity-js": "^6.3.15",
     "axios": "^1.9.0",
     "framer-motion": "^12.16.0",
     "html2canvas": "^1.4.1",
